# orange-hrm-playwright

./: .pylintrc  NDA for contractors.docx  pyproject.toml  report.html  requirements.txt
.claude/: settings.json
allure-result/: 006f90ff-abda-4a73-8c72-24afb0e15ad5-container.json  0100ac33-14b7-4db0-b85d-2d5a11d3174e-container.json  01636421-bf5b-47db-a6de-d339dc9f1085-container.json  01868f05-bce2-45a6-9059-7badb9ab6df7-container.json  0206dfc3-3eef-4636-9d86-39d17efd3ff1-container.json  023c68ac-e815-437d-b108-eda2388134dd-container.json  02609a92-09a0-4ac7-bdc6-80344a604ed3-container.json  0261b283-6faa-4094-8570-4514e1906cb6-container.json  026e8e00-b7aa-4bc0-95f2-e325678802d8-container.json  027d66c2-5eb1-4b29-97ec-2fd0d96d375b-container.json  02ca9cd1-2fce-469c-b246-b5a3ae706d79-container.json  02ddf680-6f7f-4a64-ae70-a9dc5698d973-container.json  034e3448-340e-410b-b251-abe34a313f4d-container.json  04d691bc-e395-4c23-bdb3-c3d7013ea531-container.json  04dd13cf-cceb-461f-ab4f-94cefe127230-container.json  04e45668-fc8d-4187-af8c-be9f47834569-result.json  052d7dfd-3901-4c9d-b197-9a04e5211dfc-container.json  0546992c-c67e-4f9f-b4e6-bca7ed31a09b-result.json  0577482f-7960-477d-8a93-e814b73554b9-container.json  05d21f01-acbc-44b2-aaaa-9b36fedb3590-container.json  06245318-c96d-4abd-b0f2-3514fbf1e01f-container.json  06376491-02c1-4f9a-9979-042c718285c7-container.json  06de38c0-ce34-4456-8a31-2265ec7cc15f-container.json  076ad442-7392-4129-8d31-be6c69494d8a-result.json  07a76f81-34c2-4c81-a77e-8991637665f5-container.json  07b88a6d-8149-4ed9-a88e-72d8e47e90bf-result.json  (+656 more)
(+43 files in other folders)
